# Personal-Assistant

./: .gitignore  README.md  app.py  main.py  pyproject.toml
me/: summary.txt
